chapter-files/canary-release/vs-frontend-combined-condition.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-route
  namespace: weather
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/weather-gateway
  http:
  - match:
    - headers:
        User-Agent:
          regex: .*((Edg)).*
    route:
    - destination:
        host: frontend
        subset: v1   
      weight: 50
    - destination:
        host: frontend
        subset: v2
      weight: 50		
  - route:
    - destination:
        host: frontend
        subset: v1
